Athena_Widget/Package/Xm/xmxm.pas


procedure XmResolveAllPartOffsets(w_class:TWidgetClass; offset:PXmOffsetPtr; constraint_offset:PXmOffsetPtr);cdecl;external libXm;
procedure XmResolvePartOffsets(w_class:TWidgetClass; offset:PXmOffsetPtr);cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for Xm.c    ******* }
procedure XmUpdateDisplay(w:TWidget);cdecl;external libXm;
function XmObjectAtPoint(wid:TWidget; x:TPosition; y:TPosition):TWidget;cdecl;external libXm;
function XmWidgetGetBaselines(wid:TWidget; baselines:PPDimension; line_count:PLongInt):TBoolean;cdecl;external libXm;
function XmWidgetGetDisplayRect(wid:TWidget; displayrect:PXRectangle):TBoolean;cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Primitive.c    ******* }
{*******    Public Function Declarations for Primitive.c    ******* }
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for ResConvert.c    ******* }
procedure XmCvtStringToUnitType(args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue);cdecl;external libXm;
function XmRegisterSegmentEncoding(fontlist_tag:Pchar; ct_encoding:Pchar):Pchar;cdecl;external libXm;
function XmMapSegmentEncoding(fontlist_tag:Pchar):Pchar;cdecl;external libXm;
function XmCvtCTToXmString(text:Pchar):TXmString;cdecl;external libXm;
function XmCvtTextToXmString(display:PDisplay; args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue; 
           converter_data:PXtPointer):TBoolean;cdecl;external libXm;
function XmCvtXmStringToCT(_string:TXmString):Pchar;cdecl;external libXm;
function XmCvtXmStringToText(display:PDisplay; args:TXrmValuePtr; num_args:PCardinal; from_val:PXrmValue; to_val:PXrmValue; 
           converter_data:PXtPointer):TBoolean;cdecl;external libXm;
{$ifdef UTF8_SUPPORTED}
function XmCvtXmStringToUTF8String(_string:TXmString):Pchar;cdecl;external libXm;
{$endif}
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for ResInd.c    ******* }

function XmConvertStringToUnits(screen:PScreen; spec:TString; orientation:LongInt; to_type:LongInt; parse_error:PXtEnum):LongInt;cdecl;external libXm;
function XmConvertUnits(widget:TWidget; dimension:LongInt; from_type:LongInt; from_val:LongInt; to_type:LongInt):LongInt;cdecl;external libXm;
function XmCvtToHorizontalPixels(screen:PScreen; from_val:LongInt; from_type:LongInt):LongInt;cdecl;external libXm;
function XmCvtToVerticalPixels(screen:PScreen; from_val:LongInt; from_type:LongInt):LongInt;cdecl;external libXm;
function XmCvtFromHorizontalPixels(screen:PScreen; from_val:LongInt; to_type:LongInt):LongInt;cdecl;external libXm;
function XmCvtFromVerticalPixels(screen:PScreen; from_val:LongInt; to_type:LongInt):LongInt;cdecl;external libXm;
procedure XmSetFontUnits(display:PDisplay; h_value:LongInt; v_value:LongInt);cdecl;external libXm;
procedure XmSetFontUnit(display:PDisplay; value:LongInt);cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for MenuUtil.c    ******* }
procedure XmSetMenuCursor(display:PDisplay; cursorId:TCursor);cdecl;external libXm;
function XmGetMenuCursor(display:PDisplay):TCursor;cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for Simple.c    ******* }
function XmCreateSimpleMenuBar(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external libXm;
function XmCreateSimplePopupMenu(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external libXm;
function XmCreateSimplePulldownMenu(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external libXm;
function XmCreateSimpleOptionMenu(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external libXm;
function XmCreateSimpleRadioBox(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external libXm;
function XmCreateSimpleCheckBox(parent:TWidget; name:TString; args:TArgList; arg_count:TCardinal):TWidget;cdecl;external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for VaSimple.c   ******* }
//function XmVaCreateSimpleMenuBar(parent:TWidget; name:TString; args:array of const):TWidget;cdecl;external libXm;
function XmVaCreateSimpleMenuBar(parent:TWidget; name:TString):TWidget;cdecl;varargs external libXm;
//function XmVaCreateSimplePopupMenu(parent:TWidget; name:TString; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external libXm;
function XmVaCreateSimplePopupMenu(parent:TWidget; name:TString; callback:TXtCallbackProc):TWidget;cdecl; varargs external libXm;
//function XmVaCreateSimplePulldownMenu(parent:TWidget; name:TString; post_from_button:LongInt; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external libXm;
function XmVaCreateSimplePulldownMenu(parent:TWidget; name:TString; post_from_button:LongInt; callback:TXtCallbackProc):TWidget;cdecl;varargs external libXm;
//function XmVaCreateSimpleOptionMenu(parent:TWidget; name:TString; option_label:TXmString; option_mnemonic:TKeySym; button_set:LongInt;            callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external libXm;
function XmVaCreateSimpleOptionMenu(parent:TWidget; name:TString; option_label:TXmString; option_mnemonic:TKeySym; button_set:LongInt; 
           callback:TXtCallbackProc):TWidget;cdecl; varargs; external libXm;
//function XmVaCreateSimpleRadioBox(parent:TWidget; name:TString; button_set:LongInt; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external libXm;
function XmVaCreateSimpleRadioBox(parent:TWidget; name:TString; button_set:LongInt; callback:TXtCallbackProc):TWidget;cdecl; varargs external libXm;
//function XmVaCreateSimpleCheckBox(parent:TWidget; name:TString; callback:TXtCallbackProc; args:array of const):TWidget;cdecl;external libXm;
function XmVaCreateSimpleCheckBox(parent:TWidget; name:TString; callback:TXtCallbackProc):TWidget;cdecl; varargs external libXm;
{*******    End Public Function Declarations    ******* }
{*******    Public Function Declarations for TrackLoc.c    ******* }
{ NeedWidePrototypes  }

function XmTrackingEvent(widget:TWidget; cursor:TCursor; confineTo:LongInt; confineTo2:TBoolean; pev:PXEvent):TWidget;cdecl;external libXm;
{#if NeedWidePrototypes }
{                        int confineTo) ; }
{#else }
function XmTrackingLocate(widget:TWidget; cursor:TCursor; confineTo:TBoolean):TWidget;cdecl;external libXm;
{#endif /* NeedWidePrototypes */ }
{*******    End Public Function Declarations    ******* }
{*******    Visual.c    ******* }
type

  TXmColorProc = procedure (bg_color:PXColor; fg_color:PXColor; sel_color:PXColor; ts_color:PXColor; bs_color:PXColor);cdecl;
{*******    Public Function Declarations for Visual.c    ******* }
